new products are added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <section id="products">
     <h2>Our Products</h2>
     <div class="product-list">
+      
+      <!-- Fruits -->
       <div class="product">
         <img src="https://via.placeholder.com/150" alt="Apple">
         <h3>Fresh Apples</h3>
@@ -38,11 +40,77 @@
       </div>
 
       <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Orange">
+        <h3>Oranges</h3>
+        <p>$2.5 per kg</p>
+        <button onclick="addToCart('Oranges', 2.5)">Add to Cart</button>
+      </div>
+
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Grapes">
+        <h3>Grapes</h3>
+        <p>$3 per kg</p>
+        <button onclick="addToCart('Grapes', 3)">Add to Cart</button>
+      </div>
+
+      <!-- Vegetables -->
+      <div class="product">
         <img src="https://via.placeholder.com/150" alt="Tomato">
         <h3>Tomatoes</h3>
         <p>$3 per kg</p>
         <button onclick="addToCart('Tomatoes', 3)">Add to Cart</button>
       </div>
+
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Potato">
+        <h3>Potatoes</h3>
+        <p>$1.5 per kg</p>
+        <button onclick="addToCart('Potatoes', 1.5)">Add to Cart</button>
+      </div>
+
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Onion">
+        <h3>Onions</h3>
+        <p>$2 per kg</p>
+        <button onclick="addToCart('Onions', 2)">Add to Cart</button>
+      </div>
+
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Carrot">
+        <h3>Carrots</h3>
+        <p>$2.2 per kg</p>
+        <button onclick="addToCart('Carrots', 2.2)">Add to Cart</button>
+      </div>
+
+      <!-- Essentials -->
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Milk">
+        <h3>Fresh Milk</h3>
+        <p>$1 per litre</p>
+        <button onclick="addToCart('Fresh Milk', 1)">Add to Cart</button>
+      </div>
+
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Bread">
+        <h3>Bread</h3>
+        <p>$1.5 per loaf</p>
+        <button onclick="addToCart('Bread', 1.5)">Add to Cart</button>
+      </div>
+
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Eggs">
+        <h3>Eggs</h3>
+        <p>$2 per dozen</p>
+        <button onclick="addToCart('Eggs', 2)">Add to Cart</button>
+      </div>
+
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Rice">
+        <h3>Rice</h3>
+        <p>$5 per kg</p>
+        <button onclick="addToCart('Rice', 5)">Add to Cart</button>
+      </div>
+
     </div>
   </section>
 
